# Django-project

./: .gitignore  Changelog.txt  Dockerfile  Makefile  README.md  celerybeat-schedule.db  docker-compose.yml  docker_clear.sh  factory_features.py  package-lock.json  pyproject.toml  run_all.sh  stop_beat.sh
Brainwave/: celery.py  middleware.py  settings.py  urls.py
category/: forms.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_category_image.py
category/tests/: test_category.py  test_views.py
comment/: admin.py  forms.py  models.py  urls.py  views.py
comment/migrations/: 0001_initial.py  0002_comment_idea.py  0002_remove_comment_idea_comment_idea.py  0003_alter_comment_created_at.py  0004_commentlikes.py
common_imports/: validation.py
contacts/: forms.py  tasks.py  views.py
direct/: models.py  urls.py  views.py
direct/migrations/: 0001_initial.py
idea/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
idea/migrations/: 0001_initial.py  0002_idea_updated_at.py  0003_idea_image.py  0004_likes.py  0005_dislikes.py  0006_ideastatus_idea_status.py  0007_idea_co_author.py  0008_idea_investors.py  0009_favourite.py  (+1 more)
idea/tests/: test_models.py
ideastatus/: apps.py
investment/: admin.py  models.py  payments.py  tasks.py  urls.py  views.py  yookassa_config.py
nginx/: nginx.conf
notifications/: models.py  urls.py  views.py
partnership/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: base.html  index.html
user/: forms.py  group_permission.py  models.py  urls.py  views.py
(+71 files in other folders)
