[tool.poetry]
name = "Django-project"
version = "0.1.0"
description = ""
authors = ["artyombn <balabashinan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-debug-toolbar = "^4.4.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
celery = "^5.4.0"
pillow = "^10.3.0"
faker = "^25.9.1"
django-filter = "^24.2"
yookassa = "^3.3.0"
django-celery-beat = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
